2000-10-22  Andre Spiegel  <spiegel@gnu.org>

	* vc-hooks.el (vc-version-backup-file-name): New optional args 
	MANUAL and REGEXP.
	(vc-delete-automatic-version-backups, vc-make-version-backup): 
	New functions.
	(vc-before-save): Use the latter.
	(vc-default-make-version-backups-p): Added `-p' suffix to avoid
	confusion.

	* vc-cvs.el (vc-cvs-make-version-backups-p): Added `-p' suffix as 
	expected by vc[-hooks].el.

	* vc.el (vc-checkout): Added `-p' suffix in call to
	vc-make-version-backups-p; use vc-make-version-backup to actually
	make the backup.
	(vc-version-other-window, vc-version-backup-file): Handle both
	automatic and manual backups.
	(vc-revert-file): Use vc-delete-automatic-version-backups to get rid
	of all of them.

2000-10-22  Miles Bader  <miles@gnu.org>

	* comint.el (comint-highlight-input, comint-highlight-prompt):
	Renamed, `-face' at end removed.
	(comint-send-input, comint-output-filter): Use renamed faces.

	* window.el (fit-window-to-buffer): Change defaulting of
	MAX-HEIGHT slightly.

	* faces.el (color-values, color-defined-p): Use `member', not
	`memq', because it works correctly for strings.
	(frame-set-background-mode): Actually, "unspecified-fg" and
	"unspecified-bg" *are* strings.  Use `member', not `memq', and
	`equal', not `eq', when a string value is possible.

2000-10-21  Eli Zaretskii  <eliz@is.elta.co.il>

	* info.el (Info-file-list-for-emacs): Add an entry for Speedbar.

2000-10-21  Stefan Monnier  <monnier@cs.yale.edu>

	* progmodes/sh-script.el (sh-mode-map): Remove bindings for
	sh-electric-rparen, sh-electric-less and sh-electric-hash.
	(sh-st-punc, sh-here-doc-syntax): Use string-to-syntax.
	(sh-font-lock-heredoc, sh-font-lock-paren): New funs.
	(sh-font-lock-syntactic-keywords): Use them.
	(sh-heredoc-face, sh-st-face, sh-special-syntax): Remove.
	(sh-mkword-regexp, sh-electric-rparen-needed-here): Remove.
	(sh-mode): Don't override font-lock-unfontify-region-function.
	Use a copy of sh-font-lock-syntactic-keywords.